# aeglos

./: CMakeLists.txt  README.md
data/: .gitignore
mjolnir/include/: Screenshot.h  input_nodes.h  mj.h  nodo.h  nodos_tibianos.h  processing_nodes.h
mjolnir/src/: Screenshot.cpp  input_nodes.cpp  mj.cpp  nodo.cpp  nodos_tibianos.cpp  processing_nodes.cpp
scripts/: file_dialog.py  rstp_config_dialog.py
utils/: sistema_archivos.cpp  sistema_archivos.h
